Prevent the "hello" message from jumping around when it loads

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ nav h1 {
 }
 div.card h1 {
   margin-bottom: 2em;
+  min-height: 45px;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
